--- a/deployment/package.json
+++ b/deployment/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "i18next": "^25.2.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.5.2",
     "react-router": "^7.3.0",
     "react-router-dom": "^7.3.0"
   },
