--- a/deployment/package.json
+++ b/deployment/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.2",
     "react-router": "^7.3.0",
-    "react-router-dom": "^7.3.0"
+    "react-router-dom": "^7.3.0",
+    "react-spinners": "^0.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
