--- a/deployment/package.json
+++ b/deployment/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "i18next": "^25.2.1",
+    "lucide-react": "^0.525.0",
+    "motion": "^12.23.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
